# ft-test

./: .gitignore  README.md  justfile  prompt.md  pyproject.toml
config/: inference-config.yaml  training-config.yaml
scripts/data_processing/: prepare_mimic.py  prepare_tokens.py
scripts/deployment/: export_model.py  predict.py  start_api.py  test_export.py
scripts/training/: train.py
src/data/: loader.py  loader_duckdb.py  loader_tokenized.py  processor.py
src/deploy/: api.py
src/model/: inference.py  trainer.py
src/model/export/: __init__.py  exporter.py
src/utils/: logging_utils.py
tests/: test_api.py
